fix light/dark mode flicking

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,8 +6,3 @@ body {
   color: var(--foreground);
   background: var(--background);
 }
-
-[data-theme="dark"] [data-hide-on-theme="dark"],
-[data-theme="light"] [data-hide-on-theme="light"] {
-  display: none;
-}
